--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
     "lodash": "^4.17.21",
     "minimatch": "^9.0.3"
   },
-  "scripts": {},
+  "scripts": { 
+  "build": "npx parcel build src/index.html --public-url /ci-cd-capstone.git",
+  "lint": "eslint .",
+  "test": "jest",
+  "deploy": "npm run build && npx gh-pages -d dist",
+  "ci": "npm run lint && npm run test && npm run deploy"
+  },
+
   "devDependencies": {
     "@parcel/transformer-sass": "^2.10.0",
     "eslint": "^8.52.0",
